--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/GustavoMeza/hospital-system#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "finale-rest": "^1.1.1",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.11"
   }
