--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/GustavoMeza/hospital-system#readme",
   "dependencies": {
-    "mysql2": "^2.1.0",
-    "sequelize": "^5.21.11"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mysql2": "^2.1.0"
   }
 }
