--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hospital-system",
   "version": "1.0.0",
   "description": "Hospital prescription management system",
-  "main": "src/app.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +19,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0"
   }
