--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/GustavoMeza/hospital-system#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "express": "^5.0.0-alpha.8",
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0"
